Source/WebCore/platform/mediastream/mac/AudioTrackPrivateMediaStreamCocoa.cpp
@@ -194,11 +194,16 @@ void AudioTrackPrivateMediaStreamCocoa::audioSamplesAvailable(const MediaTime& s
         m_inputDescription = std::make_unique<CAAudioStreamDescription>(inputDescription);
         m_outputDescription = std::make_unique<CAAudioStreamDescription>(outputDescription);
 
-        if (!m_dataSource)
-            m_dataSource = AudioSampleDataSource::create(description.sampleRate() * 2);
+        m_dataSource = AudioSampleDataSource::create(description.sampleRate() * 2);
 
         if (m_dataSource->setInputFormat(inputDescription) || m_dataSource->setOutputFormat(outputDescription)) {
             AudioComponentInstanceDispose(remoteIOUnit);
+            return;
+        }
+
+        if (m_isPlaying && AudioOutputUnitStart(remoteIOUnit)) {
+            AudioComponentInstanceDispose(remoteIOUnit);
+            m_inputDescription = nullptr;
             return;
         }
 
