Source/WebCore/platform/mediastream/mac/RealtimeIncomingAudioSourceCocoa.cpp
@@ -68,15 +68,6 @@ static inline AudioStreamBasicDescription streamDescription(size_t sampleRate, s
 
 void RealtimeIncomingAudioSourceCocoa::OnData(const void* audioData, int bitsPerSample, int sampleRate, size_t numberOfChannels, size_t numberOfFrames)
 {
-    // We may receive OnData calls with empty sound data (mono, samples equal to zero and sampleRate equal to 16000) when starting the call.
-    // FIXME: For the moment we skip them, we should find a better solution at libwebrtc level to not be called until getting some real data.
-    if (sampleRate == 16000 && numberOfChannels == 1)
-        return;
-
-    ASSERT(bitsPerSample == 16);
-    ASSERT(numberOfChannels == 1 || numberOfChannels == 2);
-    ASSERT(sampleRate == 48000);
-
     CMTime startTime = CMTimeMake(m_numberOfFrames, sampleRate);
     auto mediaTime = PAL::toMediaTime(startTime);
     m_numberOfFrames += numberOfFrames;
